--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,20 +8,6 @@
     android:background="@color/colorAccent"
     tools:context=".MainActivity">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvposts"
-        android:layout_width="match_parent"
-        android:layout_height="94dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="480dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp"
-        tools:listitem="@layout/lollipop1">
-
-    </android.support.v7.widget.RecyclerView>
-
     <EditText
         android:id="@+id/editText"
         android:layout_width="347dp"
@@ -62,13 +48,47 @@
         android:layout_marginBottom="109dp"
         android:text="Post" />
 
-    <android.support.design.widget.BottomNavigationView
-        android:layout_width="match_parent"
-        android:layout_height="67dp"
+
+
+    <fragment
+        android:id="@+id/fragment"
+        android:name="com.example.jeff.butterfly.Fragments.LandingFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginBottom="0dp"
-        app:menu="@menu/navigation" />
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="128dp"
+        android:layout_marginTop="108dp" />
+
+    <FrameLayout
+        android:layout_width="363dp"
+        android:layout_height="72dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="80dp"
+        android:background="@drawable/border">
+
+    </FrameLayout>
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="78dp"
+        android:layout_height="80dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="319dp"
+        android:layout_marginTop="96dp"
+        app:srcCompat="@drawable/lollipopicon1" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="56dp"
+        android:text="Today's highlight" />
 
 </RelativeLayout>
