i jsut did stuffs to try to make stuffs

--- a/app/src/main/res/layout/initpage.xml
+++ b/app/src/main/res/layout/initpage.xml
@@ -14,6 +14,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginStart="0dp"
         android:layout_marginBottom="0dp"
+        android:id="@+id/navigation"
         app:menu="@menu/navigation" />
 </LinearLayout>
 
