--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,12 +10,12 @@
 
     <EditText
         android:id="@+id/editText"
-        android:layout_width="347dp"
-        android:layout_height="146dp"
+        android:layout_width="366dp"
+        android:layout_height="153dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="39dp"
-        android:layout_marginBottom="177dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="167dp"
         android:background="#fff"
         android:ems="10"
         android:hint="Tell a story"
@@ -25,12 +25,12 @@
 
     <EditText
         android:id="@+id/editText3"
-        android:layout_width="348dp"
-        android:layout_height="40dp"
+        android:layout_width="363dp"
+        android:layout_height="34dp"
         android:layout_above="@+id/editText"
         android:layout_alignStart="@+id/editText"
-        android:layout_marginStart="0dp"
-        android:layout_marginBottom="19dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginBottom="14dp"
         android:background="#fff"
         android:ems="10"
         android:hint="What made you smile today?"
@@ -46,29 +46,28 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="109dp"
+        android:background="@color/colorPrimary"
         android:text="Post" />
 
 
-
-    <fragment
-        android:id="@+id/fragment"
-        android:name="com.example.jeff.butterfly.Fragments.LandingFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="128dp"
-        android:layout_marginTop="108dp" />
-
     <FrameLayout
-        android:layout_width="363dp"
-        android:layout_height="72dp"
+        android:layout_width="372dp"
+        android:layout_height="73dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="19dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="79dp"
         android:background="@drawable/border">
 
+        <fragment
+            android:id="@+id/fragment"
+            android:name="com.example.jeff.butterfly.Fragments.LandingFragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="128dp"
+            android:layout_marginTop="108dp" />
     </FrameLayout>
 
     <ImageView
@@ -77,8 +76,8 @@
         android:layout_height="80dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="319dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginStart="333dp"
+        android:layout_marginTop="100dp"
         app:srcCompat="@drawable/lollipopicon1" />
 
     <TextView
@@ -87,8 +86,33 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="56dp"
-        android:text="Today's highlight" />
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="46dp"
+        android:text="Today's highlight"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="249dp"
+        android:text="Write about your day"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/editText"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="118dp"
+        android:text="Post to Public"
+        android:textOff="Private"
+        android:textOn="Public" />
 
 </RelativeLayout>
