--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorAccent"
-    tools:context=".MainActivity">
+    tools:context="com.example.jeff.butterfly.Fragments.LandingFragment">
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/body"
         android:layout_width="366dp"
         android:layout_height="153dp"
         android:layout_alignParentStart="true"
@@ -24,11 +24,11 @@
         tools:layout_editor_absoluteY="260dp" />
 
     <EditText
-        android:id="@+id/editText3"
-        android:layout_width="363dp"
-        android:layout_height="34dp"
-        android:layout_above="@+id/editText"
-        android:layout_alignStart="@+id/editText"
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/body"
+        android:layout_alignStart="@+id/body"
         android:layout_marginStart="2dp"
         android:layout_marginBottom="14dp"
         android:background="#fff"
@@ -42,7 +42,6 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/editText"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="109dp"
@@ -58,16 +57,6 @@
         android:layout_marginStart="19dp"
         android:layout_marginTop="79dp"
         android:background="@drawable/border">
-
-        <fragment
-            android:id="@+id/fragment"
-            android:name="com.example.jeff.butterfly.Fragments.LandingFragment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="128dp"
-            android:layout_marginTop="108dp" />
     </FrameLayout>
 
     <ImageView
@@ -108,7 +97,6 @@
         android:id="@+id/switch1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/editText"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="118dp"
         android:text="Post to Public"
