--- a/app/src/main/res/layout/initpage.xml
+++ b/app/src/main/res/layout/initpage.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,14 +7,14 @@
         android:layout_height="match_parent"
         android:id="@+id/fragmentContainer"
         tools:context=".MainActivity">
+    
     <android.support.design.widget.BottomNavigationView
-        android:layout_width="match_parent"
-        android:layout_height="67dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginBottom="0dp"
-        android:id="@+id/navigation"
-        app:menu="@menu/navigation" />
-</LinearLayout>
+            android:layout_width="wrap_content"
+            android:layout_height="67dp"
+            android:id="@+id/navigation"
+            app:menu="@menu/navigation"
+            android:layout_marginBottom="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="0dp"/>
+</android.support.constraint.ConstraintLayout>
 
