--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,12 +10,12 @@
 
     <EditText
         android:id="@+id/body"
-        android:layout_width="366dp"
-        android:layout_height="153dp"
+        android:layout_width="410dp"
+        android:layout_height="157dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="24dp"
-        android:layout_marginBottom="167dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginBottom="162dp"
         android:background="#fff"
         android:ems="10"
         android:hint="Tell a story"
@@ -29,8 +29,8 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/body"
         android:layout_alignStart="@+id/body"
-        android:layout_marginStart="2dp"
-        android:layout_marginBottom="14dp"
+        android:layout_marginStart="-1dp"
+        android:layout_marginBottom="9dp"
         android:background="#fff"
         android:ems="10"
         android:hint="What made you smile today?"
@@ -42,9 +42,10 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="109dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="103dp"
         android:background="@color/colorPrimary"
         android:text="Post" />
 
@@ -87,8 +88,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="249dp"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="208dp"
         android:text="Write about your day"
         android:textSize="20sp"
         android:textStyle="bold" />
@@ -97,7 +98,9 @@
         android:id="@+id/switch1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginStart="24dp"
         android:layout_marginBottom="118dp"
         android:text="Post to Public"
         android:textOff="Private"
