--- a/app/src/main/res/layout/socialpage.xml
+++ b/app/src/main/res/layout/socialpage.xml
@@ -1,26 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+ <LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorAccent"
-    tools:context=".MainActivity">
-<ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="86dp"
-        android:layout_height="92dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="22dp"
-        app:srcCompat="@drawable/lollipopicon1"
-        tools:layout_editor_absoluteX="282dp"
-        tools:layout_editor_absoluteY="48dp" />
+    android:layout_height="match_parent">
+     <android.support.v7.widget.RecyclerView
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"/>
 
-    <android.support.v7.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="285dp" android:layout_alignParentBottom="true"
-            android:layout_marginBottom="318dp" android:layout_alignParentEnd="true" android:id="@+id/socialFeed"/>
-</RelativeLayout>
+        <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="0dp" android:id="@+id/socialFeed">
+        </android.support.v7.widget.RecyclerView>
+</LinearLayout>
