--- a/app/src/main/res/layout/socialpage.xml
+++ b/app/src/main/res/layout/socialpage.xml
@@ -4,13 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    
      <android.support.v7.widget.RecyclerView
              android:layout_width="match_parent"
-             android:layout_height="match_parent"/>
-
-        <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="0dp" android:id="@+id/socialFeed">
-        </android.support.v7.widget.RecyclerView>
+             android:layout_height="match_parent"
+             android:layout_marginBottom="0dp" android:id="@+id/socialFeed"
+             android:scrollbars="vertical"/>                
 </LinearLayout>
