--- a/app/src/main/res/layout/initpage.xml
+++ b/app/src/main/res/layout/initpage.xml
@@ -7,14 +7,13 @@
         android:layout_height="match_parent"
         android:id="@+id/fragmentContainer"
         tools:context=".MainActivity">
-    
+
     <android.support.design.widget.BottomNavigationView
-            android:layout_width="wrap_content"
-            android:layout_height="67dp"
-            android:id="@+id/navigation"
-            app:menu="@menu/navigation"
-            android:layout_marginBottom="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="0dp"/>
+        android:id="@+id/navigation"
+        android:layout_width="wrap_content"
+        android:layout_height="67dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/navigation" />
 </android.support.constraint.ConstraintLayout>
 
