--- a/app/src/main/res/layout/lollipop1.xml
+++ b/app/src/main/res/layout/lollipop1.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -18,12 +18,6 @@
         tools:layout_editor_absoluteX="282dp"
         tools:layout_editor_absoluteY="48dp" />
 
-    <android.support.v7.widget.CardView
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="178dp" />
-
     <TextView
         android:id="@+id/post"
         android:layout_width="wrap_content"
@@ -35,4 +29,11 @@
         android:text="Today was a good day"
         tools:layout_editor_absoluteX="99dp"
         tools:layout_editor_absoluteY="74dp" />
-</RelativeLayout>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="178dp" />
+
+</LinearLayout>
