--- a/app/src/main/res/layout/initpage.xml
+++ b/app/src/main/res/layout/initpage.xml
@@ -14,6 +14,6 @@
         android:layout_height="67dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/navigation" />
+        app:menu="@menu/navigation"  android:background="@android:color/holo_orange_light"/>
 </android.support.constraint.ConstraintLayout>
 
