--- a/app/src/main/res/layout/lollipop1.xml
+++ b/app/src/main/res/layout/lollipop1.xml
@@ -1,39 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:layout_editor_absoluteY="81dp">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:orientation="vertical" android:background="@drawable/border">
+    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
+        <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="86dp"
+                android:layout_height="92dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginEnd="0dp"
+                app:srcCompat="@drawable/lollipopicon1"/>
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="86dp"
-        android:layout_height="92dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="22dp"
-        app:srcCompat="@drawable/lollipopicon1"
-        tools:layout_editor_absoluteX="282dp"
-        tools:layout_editor_absoluteY="48dp" />
-
+        <TextView
+                android:id="@+id/post"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="20dp"
+                tools:layout_editor_absoluteX="30dp"
+                tools:layout_editor_absoluteY="30dp"/>
+    </LinearLayout>
     <TextView
-        android:id="@+id/post"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="103dp"
-        android:layout_marginTop="30dp"
-        android:text="Today was a good day"
-        tools:layout_editor_absoluteX="99dp"
-        tools:layout_editor_absoluteY="74dp" />
-
-    <android.support.v7.widget.CardView
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="178dp" />
-
+            android:text="asd;"
+            android:layout_width="match_parent"
+            android:layout_marginStart="30dp"
+            android:layout_marginBottom="15dp"
+            android:layout_height="wrap_content" android:id="@+id/body"
+            android:textColorLink="@android:color/background_dark"/>
 </LinearLayout>
